Inclusão de comentários

--- a/BoletoOnline.Class/App.config
+++ b/BoletoOnline.Class/App.config
@@ -6,7 +6,9 @@
   </configSections>
   
   <appSettings>
+    <!--Código Thumbprint do certificado, esta chave você encontra seguindo esse link: https://stackoverflow.com/questions/12106011/system-security-cryptography-cryptographicexception-keyset-does-not-exist-->
     <add key="ImpressaoDigitalCertificadoHomologacao" value="10BE835615C8AFC5B92717EBF402B0FFE678918D" />
+    <!--Código Thumbprint do certificado, esta chave você encontra seguindo esse link: https://stackoverflow.com/questions/12106011/system-security-cryptography-cryptographicexception-keyset-does-not-exist-->
     <add key="ImpressaoDigitalCertificadoProducao" value="47C42AFFBA529351C55DB7AE72AB7788211737F9" />
   </appSettings>
    
