Migrado para .net 4.6

--- a/BoletoOnline.Class/App.config
+++ b/BoletoOnline.Class/App.config
@@ -1,15 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   
   <configSections>
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   
   <appSettings>
     <!--Código Thumbprint do certificado, esta chave você encontra seguindo esse link: https://stackoverflow.com/questions/12106011/system-security-cryptography-cryptographicexception-keyset-does-not-exist-->
-    <add key="ImpressaoDigitalCertificadoHomologacao" value="10BE835615C8AFC5B92717EBF402B0FFE678918D" />
+    <add key="ImpressaoDigitalCertificadoHomologacao" value="10BE835615C8AFC5B92717EBF402B0FFE678918D"/>
     <!--Código Thumbprint do certificado, esta chave você encontra seguindo esse link: https://stackoverflow.com/questions/12106011/system-security-cryptography-cryptographicexception-keyset-does-not-exist-->
-    <add key="ImpressaoDigitalCertificadoProducao" value="47C42AFFBA529351C55DB7AE72AB7788211737F9" />
+    <add key="ImpressaoDigitalCertificadoProducao" value="47C42AFFBA529351C55DB7AE72AB7788211737F9"/>
   </appSettings>
    
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
