--- a/BoletoOnline.Test/App.config
+++ b/BoletoOnline.Test/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   
   <appSettings>
-    <add key="ImpressaoDigitalCertificadoHomologacao" value="10BE835615C8AFC5B92717EBF402B0FFE678918D" />
-    <add key="ImpressaoDigitalCertificadoProducao" value="47C42AFFBA529351C55DB7AE72AB7788211737F9" />
+    <add key="ImpressaoDigitalCertificadoHomologacao" value="10BE835615C8AFC5B92717EBF402B0FFE678918D"/>
+    <add key="ImpressaoDigitalCertificadoProducao" value="47C42AFFBA529351C55DB7AE72AB7788211737F9"/>
   </appSettings>
   
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/></startup></configuration>
