Inclusão do manual atualizado

--- a/BoletoOnline.Class/BoletoOnline.Class.csproj
+++ b/BoletoOnline.Class/BoletoOnline.Class.csproj
@@ -64,6 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Manual_Registro_de_Boleto_Bancario_Online_Mar18.pdf" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
